<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.teacher.classes.ClassesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/live_classes"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:dividerColor="?colorOnPrimaryContainer"
                    app:dividerInsetEnd="@dimen/_4sdp"
                    app:dividerInsetStart="@dimen/_4sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liveClassEmptyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/live_class" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/no_live_classes_available"
                    android:textColor="?colorOnSecondaryContainer"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/liveClassesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/previous_class"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:dividerColor="?colorOnPrimaryContainer"
                    app:dividerInsetEnd="@dimen/_4sdp"
                    app:dividerInsetStart="@dimen/_4sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/previousClassEmptyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/previous_class" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/no_previous_classes_available"
                    android:textColor="?colorOnSecondaryContainer"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/previousClassesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/createClassFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_12sdp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/conduct_class"
        app:icon="@drawable/add" />

</FrameLayout>